feat!: new data organization for lists. seperated python encoded lists into JPA data structures.